fix: button with state :active-visible are poorly rendered

--- a/app/roon-web-ng-client/src/app/components/zone-queue/zone-queue.component.scss
+++ b/app/roon-web-ng-client/src/app/components/zone-queue/zone-queue.component.scss
@@ -7,7 +7,6 @@
     span {
       @include nr.block-overflow-ellipsis();
     }
-    padding-left: 30px;
     height: 100%;
     width: 100%;
     box-sizing: border-box;
@@ -19,15 +18,14 @@
       list-style: none;
       padding: 0;
       margin: 0;
-      li {
-        padding: 0 0 15px 0;
-      }
     }
     .track {
       @include nr.button-reset();
       width: 100%;
       display: flex;
-      height: 85px;
+      height: 100px;
+      align-items: center;
+      padding-left: 15px;
       .track-image {
         height: 70px;
         min-width: 70px;
@@ -57,16 +55,21 @@
 
 :host.in-dialog {
   .queue {
-    padding-left: 0;
+    .track {
+      padding-left: 0;
+    }
   }
 }
 
 :host:not(.in-dialog) {
   .queue {
     ol {
-      padding-left: 25px;
+      padding-left: 10px;
       li {
         padding-right: 35px;
+        .mat-divider.mat-divider-inset {
+          margin-left: 95px;
+        }
       }
     }
   }
